--- a/deploy/supervisor_learneng_api.conf
+++ b/deploy/supervisor_learneng_api.conf
@@ -1,10 +1,10 @@
-[program:rest_plasmatch]
+[program:rest_learneng]
 environment =
   DEBUG=0
-command = /usr/local/apps/rest_plasmatch/env/bin/uwsgi --http :9000 --wsgi-file /usr/local/apps/rest_plasmatch/plasmatch_project/wsgi.py
-directory = /usr/local/apps/rest_plasmatch/
+command = /usr/local/apps/rest_learneng/env/bin/uwsgi --http :9000 --wsgi-file /usr/local/apps/rest_learneng/plasmatch_project/wsgi.py
+directory = /usr/local/apps/rest_learneng/
 user = root
 autostart = true
 autorestart = true
-stdout_logfile = /var/log/supervisor/rest_plasmatch.log
-stderr_logfile = /var/log/supervisor/rest_plasmatch_err.log
+stdout_logfile = /var/log/supervisor/rest_learneng.log
+stderr_logfile = /var/log/supervisor/rest_learneng_err.log
